[package]
name = "stegosaurust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
structopt = "0.3"
anyhow = "1.0.57"
atty = "0.2"
base64 = "0.13.0"
aes = "0.8.1"
cbc = {version = "0.1.2", features = ["std"]}
pbkdf2 = "0.11.0"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"