[package]
name = "stegosaurust"
description = "A steganography tool, written in rust."
authors = ["JJ Style <style.jj@pm.me>"]
version = "0.4.6"
edition = "2021"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/jj-style/stegosaurust"
homepage = "https://github.com/jj-style/stegosaurust"
documentation = "https://docs.rs/stegosaurust"
keywords = ["steganography","secrets","hide","image"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
structopt = "0.3"
anyhow = "1.0.80"
thiserror = "1.0.57"
atty = "0.2"
base64 = "0.13.0"
aes = "0.8.1"
cbc = {version = "0.1.2", features = ["std"]}
pbkdf2 = "0.11.0"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
pretty-bytes = "0.2.2"
tabled = "0.7.0"
compression = "0.1.5"
log = "0.4.21"
env_logger = "0.9.0"
itertools-num = "0.1.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
openssl = { version = "0.10", features = ["vendored"] }


[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
